security/core-amf-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-amf-core-flows
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: amf

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: ausf
    - podSelector:
        matchLabels:
          app: nrf
    - podSelector:
        matchLabels:
          app: smf

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: ausf
    - podSelector:
        matchLabels:
          app: nrf
    - podSelector:
        matchLabels:
          app: smf
