security/nrf-zero-trust.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nrf-only-amf
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nrf

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: amf
    ports:
    - protocol: TCP
      port: 5001
